@@ -19,6 +19,7 @@ python-defaults (2.7.2-2) UNRELEASED; urgency=low
       (closes: 630502, thanks to Gediminas Paulauskas for the original patch)
     - warn if public Python extension is linked to libpython2.X, fail if it's
       linked to a wrong version
+    - warn if both XS-Python-Version and X-Python-Version are defined
 
  -- Piotr Ożarowski <piotr@debian.org>  Sun, 12 Jun 2011 13:28:48 +0200
 
